# diesel-softdelete

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: lib.rs  macros.rs  methods.rs  query_dsl.rs  query_source.rs  tests.rs
