[package]
name = "diesel-softdelete"
version = "0.1.0"
authors = ["Tuetuopay <tuetuopay@me.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.4", default-features = false }

[dev-dependencies]
diesel = { version = "1.4", features = ["sqlite"] }
